🐛 fix(app): make responsive sections border-radius, shadow and spacing

--- a/apps/app/src/app/pages/example/spacing/spacing.page.scss
+++ b/apps/app/src/app/pages/example/spacing/spacing.page.scss
@@ -2,11 +2,6 @@ main {
 	min-height: 100%;
 	background-color: white;
 
-	.grid {
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-	}
-
 	.round {
 		border-radius: 2px;
 	}
